Updated circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,6 +58,14 @@ jobs:
 
 workflows:
   version: 2
+  untagged-build:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: /.*/
+            tags:
+              ignore: /.*/
   tagged-build:
     jobs:
       - release-build:
