--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ defaults: &defaults
   working_directory: /go/src/github.com/afrase/mysqldumpsplit
 
 jobs:
-  build:
+  build-test:
     <<: *defaults
 
     environment:
@@ -41,26 +41,18 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install dependencies
-          command: |
-            go get github.com/tcnksm/ghr
-            go get github.com/mitchellh/gox
+          name: Install goreleaser
+          command: go get github.com/goreleaser/goreleaser
 
       - run:
-          name: Cross-compile application
-          command: |
-            gox -osarch "darwin/amd64 darwin/386 linux/amd64 linux/386 windows/amd64 windows/386" -output "dist/mysqldumpsplit_{{.OS}}_{{.Arch}}"
-      
-      - run:
-          name: Upload binaries
-          command: |
-            ghr -u afrase -replace ${CIRCLE_TAG} dist
+          name: Run goreleaser
+          command: goreleaser
 
 workflows:
   version: 2
   untagged-build:
     jobs:
-      - build:
+      - build-test:
           filters:
             branches:
               only: /.*/
@@ -68,7 +60,13 @@ workflows:
               ignore: /.*/
   tagged-build:
     jobs:
+      - build-test:
+          filters:
+            tags:
+              only: /v.*/
       - release-build:
+          requires:
+            - build-test
           filters:
             branches:
               ignore: /.*/
